fix layout bug

--- a/src/scss/_tokens.scss
+++ b/src/scss/_tokens.scss
@@ -13,7 +13,7 @@ $color--lavendar: #eae0ff;
 
 // -----------
 
-$baseline: 1rem;
+$baseline: 0.8rem;
 $font-family--mono: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
 
 // -----------
